cmake_minimum_required(VERSION 3.5)

project(PACS LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# QtCreator supports the following variables for Android, which are identical to qmake Android variables.
# Check http://doc.qt.io/qt-5/deployment-android.html for more information.
# They need to be set before the find_package(Qt5 ...) call.

#if(ANDROID)
#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
#    if (ANDROID_ABI STREQUAL "armeabi-v7a")
#        set(ANDROID_EXTRA_LIBS
#            ${CMAKE_CURRENT_SOURCE_DIR}/path/to/libcrypto.so
#            ${CMAKE_CURRENT_SOURCE_DIR}/path/to/libssl.so)
#    endif()
#endif()

find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)


include_directories(D:/opencv/build/include/)
link_directories(D:/opencv/build/x64/MinGW/lib)

include_directories(D:/VTK/releaselib/include/vtk-9.1)
link_directories(D:/VTK/releaselib/lib)

if(ANDROID)
  add_library(PACS SHARED
    main.cpp
    Widget.cpp
    Widget.h
    Widget.ui
  )
else()
  add_executable(PACS
    main.cpp
    Widget.cpp
    Widget.h
    Widget.ui
  )
endif()

target_link_libraries(PACS PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
target_link_libraries(PACS PRIVATE libopencv_core3415)
target_link_libraries(PACS PRIVATE libopencv_calib3d3415)
target_link_libraries(PACS PRIVATE libopencv_dnn3415)
target_link_libraries(PACS PRIVATE libopencv_features2d3415)
target_link_libraries(PACS PRIVATE libopencv_flann3415)
target_link_libraries(PACS PRIVATE libopencv_highgui3415)
target_link_libraries(PACS PRIVATE libopencv_imgcodecs3415)
target_link_libraries(PACS PRIVATE libopencv_imgproc3415)
target_link_libraries(PACS PRIVATE libopencv_ml3415)
target_link_libraries(PACS PRIVATE libopencv_objdetect3415)
target_link_libraries(PACS PRIVATE libopencv_photo3415)
target_link_libraries(PACS PRIVATE libopencv_shape3415)
target_link_libraries(PACS PRIVATE libopencv_stitching3415)
target_link_libraries(PACS PRIVATE libopencv_superres3415)
target_link_libraries(PACS PRIVATE libopencv_video3415)
target_link_libraries(PACS PRIVATE libopencv_videoio3415)
target_link_libraries(PACS PRIVATE libopencv_videostab3415)
target_link_libraries(PACS PRIVATE libvtkcgns-9.1)
target_link_libraries(PACS PRIVATE libvtkChartsCore-9.1)
target_link_libraries(PACS PRIVATE libvtkCommonColor-9.1)
target_link_libraries(PACS PRIVATE libvtkCommonComputationalGeometry-9.1)
target_link_libraries(PACS PRIVATE libvtkCommonCore-9.1)
target_link_libraries(PACS PRIVATE libvtkCommonDataModel-9.1)
target_link_libraries(PACS PRIVATE libvtkCommonExecutionModel-9.1)
target_link_libraries(PACS PRIVATE libvtkCommonMath-9.1)
target_link_libraries(PACS PRIVATE libvtkCommonMisc-9.1)
target_link_libraries(PACS PRIVATE libvtkCommonSystem-9.1)
target_link_libraries(PACS PRIVATE libvtkCommonTransforms-9.1)
target_link_libraries(PACS PRIVATE libvtkDICOMParser-9.1)
target_link_libraries(PACS PRIVATE libvtkDomainsChemistry-9.1)
target_link_libraries(PACS PRIVATE libvtkDomainsChemistryOpenGL2-9.1)
target_link_libraries(PACS PRIVATE libvtkdoubleconversion-9.1)
target_link_libraries(PACS PRIVATE libvtkexodusII-9.1)
target_link_libraries(PACS PRIVATE libvtkexpat-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersAMR-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersCore-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersExtraction-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersFlowPaths-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersGeneral-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersGeneric-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersGeometry-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersHybrid-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersHyperTree-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersImaging-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersModeling-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersParallel-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersParallelImaging-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersPoints-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersProgrammable-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersSelection-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersSMP-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersSources-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersStatistics-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersTexture-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersTopology-9.1)
target_link_libraries(PACS PRIVATE libvtkFiltersVerdict-9.1)
target_link_libraries(PACS PRIVATE libvtkfmt-9.1)
target_link_libraries(PACS PRIVATE libvtkfreetype-9.1)
target_link_libraries(PACS PRIVATE libvtkGeovisCore-9.1)
target_link_libraries(PACS PRIVATE libvtkgl2ps-9.1)
target_link_libraries(PACS PRIVATE libvtkglew-9.1)
target_link_libraries(PACS PRIVATE libvtkGUISupportQt-9.1)
target_link_libraries(PACS PRIVATE libvtkGUISupportQtQuick-9.1)
target_link_libraries(PACS PRIVATE libvtkGUISupportQtSQL-9.1)
target_link_libraries(PACS PRIVATE libvtkhdf5-9.1)
target_link_libraries(PACS PRIVATE libvtkhdf5_hl-9.1)
target_link_libraries(PACS PRIVATE libvtkImagingColor-9.1)
target_link_libraries(PACS PRIVATE libvtkImagingCore-9.1)
target_link_libraries(PACS PRIVATE libvtkImagingFourier-9.1)
target_link_libraries(PACS PRIVATE libvtkImagingGeneral-9.1)
target_link_libraries(PACS PRIVATE libvtkImagingHybrid-9.1)
target_link_libraries(PACS PRIVATE libvtkImagingMath-9.1)
target_link_libraries(PACS PRIVATE libvtkImagingMorphological-9.1)
target_link_libraries(PACS PRIVATE libvtkImagingSources-9.1)
target_link_libraries(PACS PRIVATE libvtkImagingStatistics-9.1)
target_link_libraries(PACS PRIVATE libvtkImagingStencil-9.1)
target_link_libraries(PACS PRIVATE libvtkInfovisCore-9.1)
target_link_libraries(PACS PRIVATE libvtkInfovisLayout-9.1)
target_link_libraries(PACS PRIVATE libvtkInteractionImage-9.1)
target_link_libraries(PACS PRIVATE libvtkInteractionStyle-9.1)
target_link_libraries(PACS PRIVATE libvtkInteractionWidgets-9.1)
target_link_libraries(PACS PRIVATE libvtkIOAMR-9.1)
target_link_libraries(PACS PRIVATE libvtkIOAsynchronous-9.1)
target_link_libraries(PACS PRIVATE libvtkIOCGNSReader-9.1)
target_link_libraries(PACS PRIVATE libvtkIOChemistry-9.1)
target_link_libraries(PACS PRIVATE libvtkIOCityGML-9.1)
target_link_libraries(PACS PRIVATE libvtkIOCONVERGECFD-9.1)
target_link_libraries(PACS PRIVATE libvtkIOCore-9.1)
target_link_libraries(PACS PRIVATE libvtkIOEnSight-9.1)
target_link_libraries(PACS PRIVATE libvtkIOExodus-9.1)
target_link_libraries(PACS PRIVATE libvtkIOExport-9.1)
target_link_libraries(PACS PRIVATE libvtkIOExportGL2PS-9.1)
target_link_libraries(PACS PRIVATE libvtkIOExportPDF-9.1)
target_link_libraries(PACS PRIVATE libvtkIOGeometry-9.1)
target_link_libraries(PACS PRIVATE libvtkIOHDF-9.1)
target_link_libraries(PACS PRIVATE libvtkIOImage-9.1)
target_link_libraries(PACS PRIVATE libvtkIOImport-9.1)
target_link_libraries(PACS PRIVATE libvtkIOInfovis-9.1)
target_link_libraries(PACS PRIVATE libvtkIOIOSS-9.1)
target_link_libraries(PACS PRIVATE libvtkIOLegacy-9.1)
target_link_libraries(PACS PRIVATE libvtkIOLSDyna-9.1)
target_link_libraries(PACS PRIVATE libvtkIOMINC-9.1)
target_link_libraries(PACS PRIVATE libvtkIOMotionFX-9.1)
target_link_libraries(PACS PRIVATE libvtkIOMovie-9.1)
target_link_libraries(PACS PRIVATE libvtkIONetCDF-9.1)
target_link_libraries(PACS PRIVATE libvtkIOOggTheora-9.1)
target_link_libraries(PACS PRIVATE libvtkIOParallel-9.1)
target_link_libraries(PACS PRIVATE libvtkIOParallelXML-9.1)
target_link_libraries(PACS PRIVATE libvtkIOPLY-9.1)
target_link_libraries(PACS PRIVATE libvtkIOSegY-9.1)
target_link_libraries(PACS PRIVATE libvtkIOSQL-9.1)
target_link_libraries(PACS PRIVATE libvtkioss-9.1)
target_link_libraries(PACS PRIVATE libvtkIOTecplotTable-9.1)
target_link_libraries(PACS PRIVATE libvtkIOVeraOut-9.1)
target_link_libraries(PACS PRIVATE libvtkIOVideo-9.1)
target_link_libraries(PACS PRIVATE libvtkIOXML-9.1)
target_link_libraries(PACS PRIVATE libvtkIOXMLParser-9.1)
target_link_libraries(PACS PRIVATE libvtkjpeg-9.1)
target_link_libraries(PACS PRIVATE libvtkjsoncpp-9.1)
target_link_libraries(PACS PRIVATE libvtkkissfft-9.1)
target_link_libraries(PACS PRIVATE libvtklibharu-9.1)
target_link_libraries(PACS PRIVATE libvtklibproj-9.1)
target_link_libraries(PACS PRIVATE libvtklibxml2-9.1)
target_link_libraries(PACS PRIVATE libvtkloguru-9.1)
target_link_libraries(PACS PRIVATE libvtklz4-9.1)
target_link_libraries(PACS PRIVATE libvtklzma-9.1)
target_link_libraries(PACS PRIVATE libvtkmetaio-9.1)
target_link_libraries(PACS PRIVATE libvtknetcdf-9.1)
target_link_libraries(PACS PRIVATE libvtkogg-9.1)
target_link_libraries(PACS PRIVATE libvtkParallelCore-9.1)
target_link_libraries(PACS PRIVATE libvtkParallelDIY-9.1)
target_link_libraries(PACS PRIVATE libvtkpng-9.1)
target_link_libraries(PACS PRIVATE libvtkpugixml-9.1)
target_link_libraries(PACS PRIVATE libvtkRenderingAnnotation-9.1)
target_link_libraries(PACS PRIVATE libvtkRenderingContext2D-9.1)
target_link_libraries(PACS PRIVATE libvtkRenderingContextOpenGL2-9.1)
target_link_libraries(PACS PRIVATE libvtkRenderingCore-9.1)
target_link_libraries(PACS PRIVATE libvtkRenderingFreeType-9.1)
target_link_libraries(PACS PRIVATE libvtkRenderingGL2PSOpenGL2-9.1)
target_link_libraries(PACS PRIVATE libvtkRenderingImage-9.1)
target_link_libraries(PACS PRIVATE libvtkRenderingLabel-9.1)
target_link_libraries(PACS PRIVATE libvtkRenderingLOD-9.1)
target_link_libraries(PACS PRIVATE libvtkRenderingOpenGL2-9.1)
target_link_libraries(PACS PRIVATE libvtkRenderingQt-9.1)
target_link_libraries(PACS PRIVATE libvtkRenderingSceneGraph-9.1)
target_link_libraries(PACS PRIVATE libvtkRenderingUI-9.1)
target_link_libraries(PACS PRIVATE libvtkRenderingVolume-9.1)
target_link_libraries(PACS PRIVATE libvtkRenderingVolumeOpenGL2-9.1)
target_link_libraries(PACS PRIVATE libvtkRenderingVtkJS-9.1)
target_link_libraries(PACS PRIVATE libvtksqlite-9.1)
target_link_libraries(PACS PRIVATE libvtksys-9.1)
target_link_libraries(PACS PRIVATE libvtkTestingRendering-9.1)
target_link_libraries(PACS PRIVATE libvtktheora-9.1)
target_link_libraries(PACS PRIVATE libvtktiff-9.1)
target_link_libraries(PACS PRIVATE libvtkverdict-9.1)
target_link_libraries(PACS PRIVATE libvtkViewsContext2D-9.1)
target_link_libraries(PACS PRIVATE libvtkViewsCore-9.1)
target_link_libraries(PACS PRIVATE libvtkViewsInfovis-9.1)
target_link_libraries(PACS PRIVATE libvtkViewsQt-9.1)
target_link_libraries(PACS PRIVATE libvtkWrappingTools-9.1)
target_link_libraries(PACS PRIVATE libvtkzlib-9.1)
